# blogs-examples

pack_deb/dpkg-deb/: readme.md
pack_deb/dpkg-deb/hello-world/: hello-world.cc
pack_deb/dpkg-deb/hello-world_0.1-1_all/DEBIAN/: control
pack_deb_cmake/: CMakeLists.txt  main.cc  readme.md
pack_deb_cmake/cmake/: Installing.cmake  Packing.cmake
pack_deb_cmake/include/: test.h
pack_deb_cmake/src/: const.h  test.cc
